package net.thesphynx.espritmarket.Srv.Entity;

public enum BookingStatus {
    PENDING,
    PENDING_EVALUATION,
    TENTATIVE,
    APPROVED,
    CONFIRMED,
    REJECTED,
    IN_PROGRESS,
    PENDING_REVIEW,
    COMPLETED,
    CANCELLED,
    DISPUTED
}
