package net.thesphynx.espritmarket.Srv.Entity;

public enum ProjectStatus {
    PLANNED,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}
