package net.thesphynx.espritmarket.Srv.Entity;

public enum ServiceStatus {
    AVAILABLE,
    UNAVAILABLE,
    BOOKED
}
